# copy_from_str

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: quickcheck.rs
