[package]
name = "copy_from_str"
version = "1.0.1"
authors = ["Konrad Borowski <copyfromstr@borowski.pw>"]
repository = "https://gitlab.com/KonradBorowski/copy_from_str"
license = "MIT/Apache-2.0"
description = "An extension trait to copy a string into another string"
keywords = ["no_std", "str", "string"]
categories = ["no-std", "rust-patterns"]
documentation = "https://docs.rs/copy_from_str"
readme = "README.md"

[badges]
gitlab = { repository = "KonradBorowski/copy_from_str" }
maintenance = { status = "actively-developed" }

[dependencies]
extension-trait = "0.1.2"

[dev-dependencies]
quickcheck = "0.6.2"
