[package]
name = "copy_from_str"
version = "1.0.5"
authors = ["Konrad Borowski <copyfromstr@borowski.pw>"]
edition = "2018"
repository = "https://gitlab.com/KonradBorowski/copy_from_str"
license = "MIT OR Apache-2.0"
description = "An extension trait to copy a string into another string"
keywords = ["no_std", "str", "string"]
categories = ["no-std", "rust-patterns"]
documentation = "https://docs.rs/copy_from_str"
readme = "README.md"

[badges]
gitlab = { repository = "KonradBorowski/copy_from_str" }
maintenance = { status = "passively-maintained" }

[dependencies]
extension-trait = "1.0.0"

[dev-dependencies]
quickcheck = "1.0.3"
