[package]
name = "copy_from_str"
version = "1.0.6"
authors = ["Konrad Borowski <copyfromstr@borowski.pw>"]
edition = "2018"
repository = "https://github.com/xfix/copy_from_str"
license = "MIT OR Apache-2.0"
description = "An extension trait to copy a string into another string"
keywords = ["no_std", "str", "string"]
categories = ["no-std", "rust-patterns"]
documentation = "https://docs.rs/copy_from_str"
readme = "README.md"

[badges]
maintenance = { status = "passively-maintained" }

[dev-dependencies]
quickcheck = "1.0.3"
